tests/codegen/fail/interface/struct/derive_missing_for_attr.stderr
error[E0080]: evaluation of constant value failed
 --> fail/interface/struct/derive_missing_for_attr.rs:3:10
  |
3 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^ evaluation panicked: Failed to implement interface `Character` on `ObjA`: missing implementer reference in interface's `for` attribute.
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the derive macro `GraphQLObject` (in Nightly builds, run with -Z macro-backtrace for more info)
